# worklog

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
docs/superpowers/plans/: 2026-07-02-minimal-save-indicator.md  2026-07-02-sidebar-autosave.md  2026-07-02-sidebar-entry-list.md
docs/superpowers/specs/: 2026-07-02-minimal-save-indicator-design.md  2026-07-02-sidebar-autosave-design.md  2026-07-02-sidebar-entry-list-design.md  2026-07-02-typora-like-editor-design.md
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  worklog-notebook.icns
src-tauri/src/: lib.rs  main.rs
src/components/ui/: calendar.tsx  popover.tsx
src/lib/: api.ts  shortcuts.test.ts  shortcuts.ts  window-layout.test.ts  worklog.test.ts  worklog.ts
