[package]
name = "worklog"
version = "0.1.0"
description = "A native-feeling macOS Markdown worklog app"
authors = ["ttb <x.ttb@icloud.com>"]
edition = "2021"

[lib]
name = "worklog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
time = "=0.3.37"
